Añadido menú de opciones al empezar una nueva partida
-En ControlJuego, el tablero se inicializa al inicializar la partida
-Definidos valores por defecto
-Se ha creado una nueva clase VentanaOpciones que
lanza un panel de dialogo para editar las opciones

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -8,3 +8,7 @@
 /SweeperIcons.class
 /HeldDownAction.class
 /EndGameDialog.class
+/VentanaOpciones.class
+/VentanaOpciones$1.class
+/VentanaOpciones$2.class
+/VentanaOpciones$3.class
