Creado .jar ejecutable
-Se ha creado un .jar ejecutable
-Para que los iconos estuviesen incluidos en el .jar los iconos se han movido a una carptea "resources" y se obtienen mediante el método getResource()

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,16 +1,1 @@
-/ActionBoton.class
-/ControlJuego.class
-/Principal$1.class
-/Principal.class
-/RightClickAction.class
-/TwoClickAction.class
-/VentanaPrincipal.class
-/SweeperIcons.class
-/HeldDownAction.class
-/EndGameDialog.class
-/VentanaOpciones.class
-/VentanaOpciones$1.class
-/VentanaOpciones$2.class
-/VentanaOpciones$3.class
-/TimeUpdater.class
-/Car.class
+/icon/
